fix sidebar text wrapping

--- a/_scss/theme/_components.scss
+++ b/_scss/theme/_components.scss
@@ -26,6 +26,7 @@
 
   // Only show the currency selector on relevant pages
   display: none;
+  .template-index &,
   .template-collection &,
   .template-product &,
   .template-cart & {
