--- a/_scss/theme/_layout.scss
+++ b/_scss/theme/_layout.scss
@@ -42,6 +42,7 @@
     transform: translateY(-50%);
     width: calc( ( (100% - #{$main-column-max-width}) / 2 ) - (2 * #{$body-padding-h}) );
     max-height: 100vh;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-wrap: break-word;
   }
 }
